--- a/index.html
+++ b/index.html
@@ -1,88 +1,179 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guoshaoyang's Personal Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        nav {
-            margin: 0;
-            padding: 1rem;
-            text-align: center;
-            background: #444;
-        }
-        nav a {
-            color: #fff;
-            margin: 0 1rem;
-            text-decoration: none;
-        }
-        section {
-            padding: 2rem;
-            max-width: 800px;
-            margin: auto;
-        }
-        footer {
-            text-align: center;
-            padding: 1rem 0;
-            background: #333;
-            color: #fff;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>Guoshaoyang's Personal Website</h1>
-        <p>Physics Undergraduate | Artificial Intelligence Researcher</p>
-    </header>
-    <nav>
-        <a href="#home">Home</a>
-        <a href="#resume">Resume</a>
-        <a href="#research">Research</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <section id="home">
-        <h2>Welcome</h2>
-        <p>Hello! I am a second-year undergraduate student at the School of Physics, Peking University (Class of 2023). My research interests lie in artificial intelligence and embodied intelligence.</p>
-    </section>
-    <section id="resume">
-        <h2>Resume</h2>
-        <h3>Education</h3>
-        <p><strong>Peking University</strong> (2023 - Present)<br>
-        Bachelor of Science, Physics</p>
-        <h3>Research Experience</h3>
-        <p>
-            <strong>May 2023 - April 2024:</strong> High Energy Physics Research in PKU LHCb Group<br>
-            Advisor: Prof. Yanxi Zhang
-        </p>
-        <p>
-            <strong>March 2025 - Present:</strong> Research on Embodied Intelligence (VLA) in PKU-PsiRobot<br>
-            Advisor: Prof. Yaodong Yang
-        </p>
-    </section>
-    <section id="research">
-        <h2>Research</h2>
-        <h3>PHYBench: Holistic Evaluation of Physical Perception and Reasoning in Large Language Models</h3>
-        <p>Co-authored with Shi Qiu and others. Published on arXiv: <a href="https://arxiv.org/abs/2504.16074" target="_blank">PHYBench</a>.</p>
-        <p>My primary contributions include designing and organizing the data curation pipeline, building statistical models, and conducting analysis.</p>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: your-email@example.com</p>
-    </section>
-    <footer>
-        <p>Copyright &copy; 2025 Guoshaoyang. All Rights Reserved.</p>
-    </footer>
-</body>
-</html>
+<h1>郭绍阳 | 个人主页</h1>
+<p><strong>Shaoyang GUO</strong><br>
+北京大学物理学院 · 本科生 (2023级)</p>
+<p><strong>研究领域：</strong> 人工智能、具身智能（Vision–Language–Action, VLA）<br>
+<strong>研究兴趣：</strong> 具身智能 · 大模型推理 · 大模型安全 · AI for Science</p>
+<hr>
+<h2>教育背景</h2>
+<ul>
+<li><strong>北京大学物理学院 | 本科物理学专业</strong> (2023.09 – 预计2027.07)
+<ul>
+<li>第一学年 GPA：3.8/4.0（前 10%）</li>
+<li>北京大学国家奖学金（2023–2024, 2024–2025）</li>
+</ul>
+</li>
+</ul>
+<hr>
+<h2>研究经历</h2>
+<h3>PKU-PsiRobot 实验室（2025.03 – 至今）</h3>
+<ul>
+<li><strong>导师：杨耀东 助理教授</strong></li>
+<li>从事 Vision–Language–Action (VLA) 模型研究，探索具身智能领域中的物理推理及其实际应用。</li>
+</ul>
+<h3>PKU LHCb 实验组（2023.05 – 2024.05）</h3>
+<ul>
+<li><strong>导师：张艳席 助理教授</strong></li>
+<li>参与高能物理 LHCb 实验数据分析，积累了丰富的数据处理和统计分析经验。</li>
+</ul>
+<hr>
+<h2>学术成果</h2>
+<ul>
+<li><strong>PHYBench: Holistic Evaluation of Physical Perception and Reasoning in Large Language Models</strong><br>
+<em>arXiv:2504.16074</em>, 2025
+<ul>
+<li>合作者：Shi Qiu 等</li>
+<li>本人贡献：
+<ol>
+<li>设计 Data curation 流水线，规范高质量物理数据采集流程。</li>
+<li>创新性地提出并应用“表达式树编辑距离”，量化评估物理推理答案的相似性与准确性。</li>
+</ol>
+</li>
+</ul>
+</li>
+</ul>
+<hr>
+<h2>荣誉与奖励</h2>
+<ul>
+<li>北京大学国家奖学金（2023–2024, 2024–2025）</li>
+<li>全国中学生物理竞赛 (CPhO) 金牌</li>
+<li>全国信息学奥林匹克联赛 (NOIP 2020) 一等奖</li>
+<li>全国青少年信息学奥林匹克竞赛 (CSP-S 2020) 一等奖</li>
+</ul>
+<hr>
+<h2>技能概览</h2>
+<table>
+<thead>
+<tr>
+<th>领域</th>
+<th>说明</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><strong>编程语言</strong></td>
+<td>Python, C/C++, MATLAB, Wolfram Alpha</td>
+</tr>
+<tr>
+<td><strong>深度学习与框架</strong></td>
+<td>PyTorch, TensorFlow, vLLM, DeepSpeed</td>
+</tr>
+<tr>
+<td><strong>实验与数据处理素养</strong></td>
+<td>高能物理实验专业数据分析经验，曾任北京大学 CUPT 队长</td>
+</tr>
+<tr>
+<td><strong>高性能计算</strong></td>
+<td>两年以上服务器管理与使用经验，具备课程级机器学习与模型训练经验</td>
+</tr>
+<tr>
+<td><strong>语言能力</strong></td>
+<td>英语 (CET-6: 657, GRE: 320)；汉语（母语）</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<h2>联系方式</h2>
+<ul>
+<li>📧 邮箱：<a href="mailto:guoshaoyang@stu.pku.edu.cn">guoshaoyang@stu.pku.edu.cn</a></li>
+<li>🔗 GitHub：<a href="https://github.com/guoshaoyang-pku">guoshaoyang-pku</a></li>
+<li>🌐 主页：<a href="https://github.com/guoshaoyang-pku/guoshaoyang-pku.github.io">个人主页</a></li>
+</ul>
+<h1>Shaoyang GUO | Personal Homepage</h1>
+<p><strong>Undergraduate Student, School of Physics, Peking University (Class of 2023)</strong></p>
+<p><strong>Research Area:</strong> Artificial Intelligence, Embodied Intelligence (Vision–Language–Action, VLA)<br>
+<strong>Research Interests:</strong> Embodied Intelligence · Large-Model Reasoning · Model Safety · AI for Science</p>
+<hr>
+<h2>Education</h2>
+<ul>
+<li><strong>School of Physics, Peking University</strong> | B.S. in Physics <em>(Sep 2023 – Expected Jul 2027)</em>
+<ul>
+<li>GPA (Year 1): 3.8/4.0 (Top 10%)</li>
+<li>National Scholarship, Peking University (2023–2024, 2024–2025)</li>
+</ul>
+</li>
+</ul>
+<hr>
+<h2>Research Experience</h2>
+<h3>PKU-PsiRobot Lab <em>(Mar 2025 – Present)</em></h3>
+<ul>
+<li><strong>Advisor:</strong> Prof. Yaodong Yang (Assistant Professor)</li>
+<li>Conducting research on Vision–Language–Action (VLA) models, focusing on physical reasoning tasks and real-world embodied intelligence applications.</li>
+</ul>
+<h3>PKU LHCb Experimental Group <em>(May 2023 – May 2024)</em></h3>
+<ul>
+<li><strong>Advisor:</strong> Prof. Yanxi Zhang (Assistant Professor)</li>
+<li>Conducted data analysis for high-energy physics experiments (LHCb), accumulating extensive experience in data processing and statistical methodologies.</li>
+</ul>
+<hr>
+<h2>Publications</h2>
+<ul>
+<li><strong>PHYBench: Holistic Evaluation of Physical Perception and Reasoning in Large Language Models</strong><br>
+<em>arXiv:2504.16074</em>, 2025
+<ul>
+<li>Collaborators: Shi Qiu et al.</li>
+<li>Personal contributions:
+<ol>
+<li>Designed and implemented data curation pipelines for high-quality physics data collection.</li>
+<li>Introduced the &quot;Expression Tree Edit Distance&quot; metric to quantitatively evaluate the similarity and accuracy of physical reasoning answers.</li>
+</ol>
+</li>
+</ul>
+</li>
+</ul>
+<hr>
+<h2>Honors &amp; Awards</h2>
+<ul>
+<li>National Scholarship, Peking University (2023–2024, 2024–2025)</li>
+<li>Gold Medal, Chinese Physics Olympiad (CPhO)</li>
+<li>First Prize, National Olympiad in Informatics in Provinces (NOIP 2020)</li>
+<li>First Prize, Chinese Secondary-School Programming Contest (CSP-S 2020)</li>
+</ul>
+<hr>
+<h2>Technical Skills</h2>
+<table>
+<thead>
+<tr>
+<th>Area</th>
+<th>Details</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><strong>Programming Languages</strong></td>
+<td>Python, C/C++, MATLAB, Wolfram Alpha</td>
+</tr>
+<tr>
+<td><strong>Deep Learning Frameworks</strong></td>
+<td>PyTorch, TensorFlow, vLLM, DeepSpeed</td>
+</tr>
+<tr>
+<td><strong>Experiment &amp; Data Skills</strong></td>
+<td>Experienced in high-energy physics data analysis; Team leader, PKU CUPT</td>
+</tr>
+<tr>
+<td><strong>High-Performance Computing</strong></td>
+<td>Over two years of experience in server management and machine-learning model training</td>
+</tr>
+<tr>
+<td><strong>Languages</strong></td>
+<td>English (CET-6: 657, GRE: 320), Chinese (Native)</td>
+</tr>
+</tbody>
+</table>
+<hr>
+<h2>Contact Information</h2>
+<ul>
+<li>📧 Email: <a href="mailto:guoshaoyang@stu.pku.edu.cn">guoshaoyang@stu.pku.edu.cn</a></li>
+<li>🔗 GitHub: <a href="https://github.com/guoshaoyang-pku">guoshaoyang-pku</a></li>
+<li>🌐 Homepage: <a href="https://github.com/guoshaoyang-pku/guoshaoyang-pku.github.io">Personal Website</a></li>
+</ul>
