--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <hr>
 <h2>荣誉与奖励</h2>
 <ul>
-<li>北京大学国家奖学金（2023–2024, 2024–2025）</li>
+<li>北京大学国家奖学金（2023–2024）</li>
 <li>全国中学生物理竞赛 (CPhO) 金牌</li>
 <li>全国信息学奥林匹克联赛 (NOIP 2020) 一等奖</li>
 <li>全国青少年信息学奥林匹克竞赛 (CSP-S 2020) 一等奖</li>
@@ -71,10 +71,7 @@
 <td><strong>高性能计算</strong></td>
 <td>两年以上服务器管理与使用经验，具备课程级机器学习与模型训练经验</td>
 </tr>
-<tr>
-<td><strong>语言能力</strong></td>
-<td>英语 (CET-6: 657, GRE: 320)；汉语（母语）</td>
-</tr>
+
 </tbody>
 </table>
 <hr>
@@ -125,7 +122,7 @@
 <hr>
 <h2>Honors &amp; Awards</h2>
 <ul>
-<li>National Scholarship, Peking University (2023–2024, 2024–2025)</li>
+<li>National Scholarship, Peking University (2023–2024)</li>
 <li>Gold Medal, Chinese Physics Olympiad (CPhO)</li>
 <li>First Prize, National Olympiad in Informatics in Provinces (NOIP 2020)</li>
 <li>First Prize, Chinese Secondary-School Programming Contest (CSP-S 2020)</li>
@@ -156,10 +153,7 @@
 <td><strong>High-Performance Computing</strong></td>
 <td>Over two years of experience in server management and machine-learning model training</td>
 </tr>
-<tr>
-<td><strong>Languages</strong></td>
-<td>English (CET-6: 657, GRE: 320), Chinese (Native)</td>
-</tr>
+
 </tbody>
 </table>
 <hr>
