--- a/index.html
+++ b/index.html
@@ -1,165 +1,280 @@
-<h1>郭绍阳 | 个人主页</h1>
-<p><strong>Shaoyang GUO</strong><br>
-北京大学物理学院 · 本科生 (2023级)</p>
-<p><strong>研究领域：</strong> 人工智能、具身智能（Vision–Language–Action, VLA）<br>
-<strong>研究兴趣：</strong> 具身智能 · 大模型推理 · 大模型安全 · AI for Science</p>
-<hr>
-<h2>教育背景</h2>
-<ul>
-<li><strong>北京大学物理学院 | 本科物理学专业</strong> (2023.09 – 预计2027.07)
-</li>
-</ul>
-<hr>
-<h2>研究经历</h2>
-<h3>PKU-PsiRobot 实验室（2025.03 – 至今）</h3>
-<ul>
-<li><strong>导师：杨耀东 助理教授</strong></li>
-<li>从事 Vision–Language–Action (VLA) 模型研究，探索具身智能领域中的物理推理及其实际应用。</li>
-</ul>
-<h3>PKU LHCb 实验组（2023.05 – 2024.05）</h3>
-<ul>
-<li><strong>导师：张艳席 助理教授</strong></li>
-<li>参与高能物理 LHCb 实验数据分析，积累了丰富的数据处理和统计分析经验。</li>
-</ul>
-<hr>
-<h2>学术成果</h2>
-<ul>
-<li><strong>PHYBench: Holistic Evaluation of Physical Perception and Reasoning in Large Language Models</strong><br>
-<em>arXiv:2504.16074</em>, 2025
-<ul>
-<li>合作者：Shi Qiu 等</li>
-<li>本人贡献：
-<ol>
-<li>设计 Data curation 流水线，规范高质量物理数据采集流程。</li>
-<li>创新性地提出并应用“表达式树编辑距离”，量化评估物理推理答案的相似性与准确性。</li>
-</ol>
-</li>
-</ul>
-</li>
-</ul>
-<hr>
-<h2>荣誉与奖励</h2>
-<ul>
-<li>北京大学国家奖学金（2023–2024）</li>
-<li>全国中学生物理竞赛 (CPhO) 金牌</li>
-<li>全国信息学奥林匹克联赛 (NOIP 2020) 一等奖</li>
-<li>全国青少年信息学奥林匹克竞赛 (CSP-S 2020) 一等奖</li>
-</ul>
-<hr>
-<h2>技能概览</h2>
-<table>
-<thead>
-<tr>
-<th>领域</th>
-<th>说明</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>编程语言</strong></td>
-<td>Python, C/C++, MATLAB, Wolfram Alpha</td>
-</tr>
-<tr>
-<td><strong>深度学习与框架</strong></td>
-<td>PyTorch, TensorFlow, vLLM, DeepSpeed</td>
-</tr>
-<tr>
-<td><strong>实验与数据处理素养</strong></td>
-<td>高能物理实验专业数据分析经验，曾任北京大学 CUPT 队长</td>
-</tr>
-<tr>
-<td><strong>高性能计算</strong></td>
-<td>两年以上服务器管理与使用经验，具备课程级机器学习与模型训练经验</td>
-</tr>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>郭绍阳 | 个人学术主页</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', sans-serif;
+        }
 
-</tbody>
-</table>
-<hr>
-<h2>联系方式</h2>
-<ul>
-<li>📧 邮箱：<a href="mailto:guoshaoyang@stu.pku.edu.cn">guoshaoyang@stu.pku.edu.cn</a></li>
-<li>🔗 GitHub：<a href="https://github.com/guoshaoyang-pku">guoshaoyang-pku</a></li>
-<li>🌐 主页：<a href="https://github.com/guoshaoyang-pku/guoshaoyang-pku.github.io">个人主页</a></li>
-</ul>
-<h1>Shaoyang GUO | Personal Homepage</h1>
-<p><strong>Undergraduate Student, School of Physics, Peking University (Class of 2023)</strong></p>
-<p><strong>Research Area:</strong> Artificial Intelligence, Embodied Intelligence (Vision–Language–Action, VLA)<br>
-<strong>Research Interests:</strong> Embodied Intelligence · Large-Model Reasoning · Model Safety · AI for Science</p>
-<hr>
-<h2>Education</h2>
-<ul>
-<li><strong>School of Physics, Peking University</strong> | B.S. in Physics <em>(Sep 2023 – Expected Jul 2027)</em>
-</li>
-</ul>
-<hr>
-<h2>Research Experience</h2>
-<h3>PKU-PsiRobot Lab <em>(Mar 2025 – Present)</em></h3>
-<ul>
-<li><strong>Advisor:</strong> Prof. Yaodong Yang (Assistant Professor)</li>
-<li>Conducting research on Vision–Language–Action (VLA) models, focusing on physical reasoning tasks and real-world embodied intelligence applications.</li>
-</ul>
-<h3>PKU LHCb Experimental Group <em>(May 2023 – May 2024)</em></h3>
-<ul>
-<li><strong>Advisor:</strong> Prof. Yanxi Zhang (Assistant Professor)</li>
-<li>Conducted data analysis for high-energy physics experiments (LHCb), accumulating extensive experience in data processing and statistical methodologies.</li>
-</ul>
-<hr>
-<h2>Publications</h2>
-<ul>
-<li><strong>PHYBench: Holistic Evaluation of Physical Perception and Reasoning in Large Language Models</strong><br>
-<em>arXiv:2504.16074</em>, 2025
-<ul>
-<li>Collaborators: Shi Qiu et al.</li>
-<li>Personal contributions:
-<ol>
-<li>Designed and implemented data curation pipelines for high-quality physics data collection.</li>
-<li>Introduced the &quot;Expression Tree Edit Distance&quot; metric to quantitatively evaluate the similarity and accuracy of physical reasoning answers.</li>
-</ol>
-</li>
-</ul>
-</li>
-</ul>
-<hr>
-<h2>Honors &amp; Awards</h2>
-<ul>
-<li>National Scholarship, Peking University (2023–2024)</li>
-<li>Gold Medal, Chinese Physics Olympiad (CPhO)</li>
-<li>First Prize, National Olympiad in Informatics in Provinces (NOIP 2020)</li>
-<li>First Prize, Chinese Secondary-School Programming Contest (CSP-S 2020)</li>
-</ul>
-<hr>
-<h2>Technical Skills</h2>
-<table>
-<thead>
-<tr>
-<th>Area</th>
-<th>Details</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td><strong>Programming Languages</strong></td>
-<td>Python, C/C++, MATLAB, Wolfram Alpha</td>
-</tr>
-<tr>
-<td><strong>Deep Learning Frameworks</strong></td>
-<td>PyTorch, TensorFlow, vLLM, DeepSpeed</td>
-</tr>
-<tr>
-<td><strong>Experiment &amp; Data Skills</strong></td>
-<td>Experienced in high-energy physics data analysis; Team leader, PKU CUPT</td>
-</tr>
-<tr>
-<td><strong>High-Performance Computing</strong></td>
-<td>Over two years of experience in server management and machine-learning model training</td>
-</tr>
+        body {
+            line-height: 1.6;
+            color: #333;
+        }
 
-</tbody>
-</table>
-<hr>
-<h2>Contact Information</h2>
-<ul>
-<li>📧 Email: <a href="mailto:guoshaoyang@stu.pku.edu.cn">guoshaoyang@stu.pku.edu.cn</a></li>
-<li>🔗 GitHub: <a href="https://github.com/guoshaoyang-pku">guoshaoyang-pku</a></li>
-<li>🌐 Homepage: <a href="https://github.com/guoshaoyang-pku/guoshaoyang-pku.github.io">Personal Website</a></li>
-</ul>
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        /* 顶栏导航 */
+        nav {
+            background: #007bff;
+            color: white;
+            padding: 15px;
+            margin-bottom: 30px;
+        }
+
+        nav ul {
+            display: flex;
+            list-style: none;
+            justify-content: flex-start;
+            gap: 30px;
+        }
+        ul ul {
+            padding-left: 30px; /* 把第二层列表的缩进设为30px */
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+        }
+
+        /* 个人名片 - 左右布局 */
+        .profile {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 40px;
+            margin-bottom: 60px;
+        }
+
+        .profile-text {
+            flex: 1;
+            text-align: left;
+        }
+
+        .profile-avatar {
+            width: 220px;
+            height: 300px;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            flex-shrink: 0; /* 防止头像被压缩 */
+        }
+
+        .profile-avatar img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .profile h1 {
+            font-size: 2.2em;
+            margin-bottom: 10px;
+        }
+
+        .profile p {
+            font-size: 1.1em;
+            color: #666;
+            margin-bottom: 15px;
+        }
+
+        .social-links {
+            margin-top: 20px;
+        }
+
+        .social-links a {
+            color: #007bff;
+            margin-right: 15px;
+            font-size: 1.2em;
+        }
+
+        /* 其他板块样式 */
+        .section {
+            margin-bottom: 50px;
+        }
+
+        .section h2 {
+            color: #007bff;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+            font-size: 1.8em;
+        }
+        .section ul {
+            padding-left: 20px; /* 把第二层列表的缩进设为30px */
+        }
+        .timeline {
+            list-style: none;
+        }
+
+        .timeline li {
+            margin-bottom: 30px;
+        }
+
+        .publication {
+            border: 1px solid #e0e0e0;
+            padding: 15px;
+            border-radius: 5px;
+            margin-bottom: 20px;
+        }
+
+        .skills-table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+
+        .skills-table td {
+            padding: 8px;
+            border-bottom: 1px solid #e0e0e0;
+        }
+
+        .skills-table td:first-child {
+            width: 150px;
+            font-weight: 500;
+            color: #666;
+        }
+
+        /* 响应式调整 */
+        @media (max-width: 768px) {
+            nav ul {
+                flex-direction: column;
+                gap: 10px;
+                text-align: center;
+            }
+
+            .profile {
+                flex-direction: column;
+                text-align: center;
+            }
+
+            .profile-text {
+                text-align: center;
+            }
+
+            .skills-table {
+                font-size: 0.9em;
+            }
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <!-- 顶栏导航 -->
+        <nav>
+            <ul>
+                <li><a href="#home">首页</a></li>
+                <li><a href="#research">研究方向</a></li>
+                <li><a href="#publications">学术成果</a></li>
+                <li><a href="#experience">研究经历</a></li>
+                <li><a href="#awards">荣誉奖项</a></li>
+                <li><a href="#skills">技能与工具</a></li>
+                <li><a href="#contact">联系方式</a></li>
+            </ul>
+        </nav>
+
+        <!-- 个人简介 - 照片在右侧 -->
+        <section class="profile" id="home">
+            <div class="profile-text">
+                <h1>郭绍阳</h1>
+                <p>北京大学物理学院 本科生（2023级）</p>
+                <p>研究方向：具身智能（VLA）、大语言模型安全（LLM Saftey）</p>
+                <div class="social-links">
+                    <a href="mailto:guoshaoyang@stu.pku.edu.cn" target="_blank">📧 邮箱</a>
+                    <a href="https://github.com/guoshaoyang-pku" target="_blank">🔗 GitHub</a>
+                </div>
+                <p class="summary">
+                    聚焦具身智能与大语言模型安全研究，具有物理学和计算机科学交叉学科经验。设计PHYBench评估框架，提出"表达式树编辑距离"量化方法来评估物理推理答案的相似性与准确性。
+                </p>
+            </div>
+            <div class="profile-avatar">
+                <!-- 预留个人照片位置，替换为实际图片链接 -->
+                <img src="https://guoshaoyang-pku.github.io/photo1.jpg" alt="郭绍阳 个人照片">
+            </div>
+        </section>
+
+        <!-- 研究方向 -->
+        <section class="section" id="research">
+            <h2>研究方向</h2>
+            <ul>
+                <li>具身智能（Vision-Language-Action, VLA）</li>
+                <li>大语言模型安全（Large Language Model Safety）</li>
+            </ul>
+        </section>
+
+        <!-- 研究经历 -->
+        <section class="section" id="experience">
+            <h2>研究经历</h2>
+            <ul class="section">
+                <li>
+                    <h3>2025.03 – 至今，PKU-PsiRobot实验室 | 具身智能研究，导师：杨耀东 助理教授 </h3>
+                    <ul>
+                        <li>从事 Vision–Language–Action (VLA) 模型研究，探索具身智能领域中的物理推理及其实际应用</li>
+                    </ul>
+                </li>
+                <li>
+                    <h3>2023.05 – 2024.05，PKU LHCb实验组 | 高能物理数据分析，导师：张艳席 助理教授</h3>
+                    <ul>
+                        <li>参与高能物理 LHCb 实验数据分析，积累了丰富的数据处理和统计分析经验</li>
+                    </ul>
+                </li>
+            </ul>
+        </section>
+
+        <!-- 学术成果 -->
+        <section class="section" id="publications">
+            <h2>学术成果</h2>
+            <div class="publication">
+                <h3><a href="https://arxiv.org/abs/2504.16074"> PHYBench: Holistic Evaluation of Physical Perception and Reasoning in Large Language Models</a></h3>
+                <p>arXiv:2504.16074, 2025</p>
+                <p>合作者：Shi Qiu等</p>
+                <p>本人贡献：设计数据采集流程，提出"表达式树编辑距离"度量标准，主导实验验证</p>
+            </div>
+        </section>
+
+        <!-- 荣誉奖项 -->
+        <section class="section" id="awards">
+            <h2>荣誉与奖励</h2>
+            <ul>
+                <li>北京大学国家奖学金（2023–2024）</li>
+                <li>北京大学CUPT（2024）队长</li>
+                <li>全国中学生物理竞赛（CPhO 2022）金牌</li>
+                <li>全国信息学奥林匹克联赛（NOIP 2020）一等奖</li>
+            </ul>
+        </section>
+
+        <!-- 技能与工具 -->
+        <section class="section" id="skills">
+            <h2>技能与工具</h2>
+            <table class="skills-table">
+                <tr>
+                    <td>编程语言</td>
+                    <td>Python, C/C++, MATLAB, Wolfram Alpha</td>
+                </tr>
+                <tr>
+                    <td>深度学习框架</td>
+                    <td>PyTorch, TensorFlow, vLLM, DeepSpeed</td>
+                </tr>
+                <tr>
+                    <td>AI For Science</td>
+                    <td>ROOT</td>
+                </tr>
+            </table>
+        </section>
+
+        <!-- 联系方式 -->
+        <section class="section" id="contact">
+            <h2>联系方式</h2>
+            <p>北京大学物理学院<br>北京市海淀区颐和园路5号</p>
+            <p>📧 <a href="mailto:guoshaoyang@stu.pku.edu.cn">guoshaoyang@stu.pku.edu.cn</a></p>
+            <p>🔗 <a href="https://github.com/guoshaoyang-pku" target="_blank">GitHub主页</a></p>
+        </section>
+    </div>
+</body>
+</html>
