--- a/index.html
+++ b/index.html
@@ -165,10 +165,21 @@
     </style>
 </head>
 <body>
+    <script>
+    // 手动切换语言逻辑
+    document.getElementById('lang-zh').addEventListener('click', () => {
+        window.location.href = '/index.html';
+    });
+
+    document.getElementById('lang-en').addEventListener('click', () => {
+        window.location.href = '/index_en.html';
+    });
+    </script>
     <div class="container">
         <!-- 顶栏导航 -->
         <nav>
             <ul>
+                <li></li><a href="#" id="lang-en">English Version</a></li>
                 <li><a href="#home">首页</a></li>
                 <li><a href="#research">研究方向</a></li>
                 <li><a href="#publications">学术成果</a></li>
