--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <!-- 顶栏导航 -->
         <nav>
             <ul>
-                <li></li><a href="#" id="lang-en">English Version</a></li>
+                <li></li><a href="/index_en.html" id="lang-en">English Version</a></li>
                 <li><a href="#home">首页</a></li>
                 <li><a href="#research">研究方向</a></li>
                 <li><a href="#publications">学术成果</a></li>
